--- a/_harp/training/index.ejs
+++ b/_harp/training/index.ejs
@@ -1,21 +1,23 @@
 <div class='training'>
 	<h1><span class="desktop">Practical t</span><span class="mobile">T</span>raining for software developers</h1>
 	<p><span class="desktop">Globe Town offers h</span><span class="mobile">H</span>ands-on training in React and React Native.</p>
-	<button class='button-one'>BOOK TRAINING</button>
+	<a href="#contact"><button class='button-one'>TALK TO US</button></a>
 </div>
 
 
 <div class="box-container">
 	<div class="grid-2">
-		<div class="box">
-			<h1>React Native</h1>
-			<p>18th October</p>
-		</div>
+		<a href="https://ti.to/globetown/react-native" target="_blank">
+			<div class="box">
+				<h1>React Native</h1>
+				<p>18th October</p>
+			</div>
+		</a>
 	</div>
 	<div class="grid-2">
 		<div class="box">
 			<h1>React</h1>
-			<p>26th October</p>
+			<p>25th October</p>
 		</div>
 	</div>
 </div>
