--- a/_harp/css/layout/_navbar.scss
+++ b/_harp/css/layout/_navbar.scss
@@ -72,7 +72,7 @@ nav {
 }
 
 .logo h2 {
-	width: 160px;
+	width: 170px;
 }
 
 @media (max-width: 940px) {
@@ -90,6 +90,7 @@ nav {
 		}
 	}
 	nav {
+		padding: 0 15px;
 		h2 {
 			font-size: 0.8em;
 		}
