--- a/_harp/index.ejs
+++ b/_harp/index.ejs
@@ -1,6 +1,5 @@
 <div class="landing">
-		<div id="image" class="section-landing-image"></div>
-		<div class="section-landing-image-alt"></div>
+		<div class="section-landing-image"></div>
 		<h1>Globe Town</h1>
 </div>
 
