--- a/_harp/_partials/navbar.ejs
+++ b/_harp/_partials/navbar.ejs
@@ -1,29 +1,12 @@
-<nav id="navbar">
-	<div class="dropdownToggle">
-		<div class="logo">
-			<h2><a href="/">Globe Town</a></h2>
-		</div>
-		<div class="links-container">
-		<div class="nav-settings-dropdown hide">
-			<ul>
-				<li>
-					<h2><a href='/'>HOME</a></h2>
-				</li>
-				<li>
-					<h2><a href='/training'>TRAINING</a></h2>
-				</li>
-				<li>
-					<h2><a href='/about'>ABOUT</a></h2>
-				</li>
-			</ul>
-		</div>
-		<a data-toggle="dropdown" class="toggle-container">
-			<p>
-				<button id="cmn-toggle-switch" class="icon cmn-toggle-switch cmn-toggle-switch__htx">
-		  		<span>toggle menu</span>
-				</button>
-			</p>
-		</a>
-	</div>
-	</div>
-</nav>
+<header>
+  <nav>
+    <div class="links">
+      <a href="/">Home</a>
+      <a href="/about/">About</a>
+      <a href="/faq/">FAQ</a>
+    </div>
+    <div class="apply">
+      <a href="/academy/">Apply</a>
+    </div>
+  </nav>
+</header>
