--- a/_harp/about/_layout.ejs
+++ b/_harp/about/_layout.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <%- partial("_partials/header") %>
+  <%- partial("../_partials/header") %>
   <body>
-    <%- partial("_partials/navbar") %>
+    <%- partial("../_partials/navbar") %>
      <%- yield %>
-    <%- partial("_partials/footer") %>
+    <%- partial("../_partials/footer") %>
   <div>
     <script src="/js/main.js"></script>
   </div>
