--- a/_harp/css/layout/_grid.scss
+++ b/_harp/css/layout/_grid.scss
@@ -1,43 +1,45 @@
-*{padding:0;margin:0;box-sizing:border-box;}.grid-container{max-width:100%;margin:0 auto;}.grid-container:after{content:"";display:table;clear:both;}[class*='grid-']{float:left}
 
-@media (min-width: 1000px) {
-	.grid-4 {
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
+.grid-container {
+	max-width: 100%;
+	margin: 0 auto;
+}
+
+.grid-container:after {
+	content:"";
+	display:table;
+	clear:both;
+}
+
+[class*='grid-']{
+	float:left
+}
+
+@media (min-width: 800px) {
+	.grid-2 {
 		width: 33.333333%;
 	}
 }
 
-@media (max-width: 1000px) {
-	.grid-4 {
-		width: 50%;
-	}
-}
-
-@media (max-width: 500px) {
-	.grid-4 {
-		width: 100%;
-	}
-}
-
-@media (min-width: 1000px) {
-	.grid-6 {
-		width: 50%;
-	}
-}
-
-@media (max-width: 1000px) {
-	.grid-6 {
-		width: 100%;
-	}
-}
-
-@media (min-width: 600px) {
+@media (min-width: 800px) {
 	.grid-2 {
-			width: 50%;
+		width: 36%;
 	}
 }
 
-@media (max-width: 600px) {
-	.grid-2 {
+@media (max-width: 800px) {
+	.grid-4 {
 		width: 100%;
+	}
+}
+
+@media (min-width: 800px) {
+	.grid-4 {
+		width: 64%;
 	}
 }
