--- a/_harp/css/main.scss
+++ b/_harp/css/main.scss
@@ -1,24 +1,21 @@
+
 @import "helpers/variables";
 @import "base/fontello";
 @import "base/typography";
-@import "components/button";
-@import "components/input";
-@import "layout/contact";
+@import "layout/footer";
 @import "layout/navbar";
 @import "layout/specifics";
 @import "layout/grid";
 @import "pages/about";
 @import "pages/home";
-@import "pages/portfolio";
-@import "pages/services";
-@import "pages/training";
 
 body {
+  background: #f6f6ef;
   margin: 0;
 }
 
 * {
-  font-family: 'Lato', sans-serif;
+  font-family: "Avenir Light", Helvetica, Arial, sans-serif;
 }
 
 h1, h2, h3, h4, p {
