--- a/_harp/index.ejs
+++ b/_harp/index.ejs
@@ -1,64 +1,15 @@
-<div class="landing">
-		<div class="section-landing-image"></div>
-		<h1>Globe Town</h1>
-</div>
-
-<div class='copy'>
-	<div>
-		<h1>We build software for web and mobile using React, React Native and Hapi.</h1>
-		<!--<h1>Globe Town crafts beautiful software. Education, quality and collective empowerment are at the heart of what we do. We are rethinking the traditional workplace. By giving talented individuals their autonomy, we are challenging the status quo and providing exceptional value to our clients.</h1>-->
-
-
-	</div>
-</div>
-
-<div id="portfolio-anchor"></div>
-<div class="portfolio">
-	<div class="images-container">
-		<%- partial("./_partials/portfolio", { "link": "portfolio/africabriefcase", "name": "Africa Briefcase", "company": "Africa Media Lab", "imageStyle": "image-one", "display": "" }) %>
-		<%- partial("./_partials/portfolio", { "link": "portfolio/chichester-harbour", "name": "Membership Management", "company": "Chichester Harbour", "imageStyle": "image-four", "display": "" }) %>
-
-
-		<!--<%- partial("./_partials/portfolio", { "link": "portfolio/camdenmaps", "name": "Camden Maps", "company": "Camden Council", "imageStyle": "image-three", "display": "" }) %>
-		<%- partial("./_partials/portfolio", { "link": "portfolio/stockport", "name": "Suicide Prevention", "company": "Stockport Council", "imageStyle": "image-five", "display": "" }) %>
-		<%- partial("./_partials/portfolio", { "link": "portfolio/coot-freight", "name": "Freight Management", "company": "Coot Freight", "imageStyle": "image-seven", "display": "" }) %>
-		<%- partial("./_partials/portfolio", { "link": "portfolio/streetflower", "name": "Street Flower", "company": "", "imageStyle": "image-six", "display": "" }) %>
-
-		-->
-
-	</div>
-</div>
-
-<div id="services-anchor"></div>
-<div class="services">
-	<ul class="container">
-		<div class="grid-4">
-			<a href="services/mobile-development">
-				<div class="services-icon-container">
-					<div class="services-icon mobile-development"></div>
-					<div class="services-icon mobile-development-alt"></div>
-				</div>
-				<p>Mobile Development</p>
-			</a>
-		</div>
-		<div class="grid-4">
-			<a href="services/application-development">
-				<div class="services-icon-container">
-					<div class="services-icon web-application"></div>
-					<div class="services-icon web-application-alt"></div>
-				</div>
-				<p>Web Application Development</p>
-			</a>
-		</div>
-		<div class="grid-4">
-			<a href="/training">
-				<div class="services-icon-container">
-					<div class="services-icon training"></div>
-					<div class="services-icon training-alt"></div>
-				</div>
-				<p>Training</p>
-			</a>
-		</div>
-	</li>
-	</ul>
+<div class="content">
+  <section class="grid-container">
+    <div class="grid-2" style="padding-right:15px">
+      <h1>This summer we will be teaching software craftsmanship to ambitious women and men in Palestine.</h1>
+      <p>Where traditional industries are limited, software is a viable alternative. Fast internet and good equipment open the door to a global marketplace, where work can be both fulfilling and profitable.</p>
+      <span class="space"></span>
+      <p>In London, the Founders & Coders educational model sees 100% of its graduates go on to be full-stack JavaScript developers or tech entrepreneurs. This summer, Globetown, F&C and Novus will travel over 2000 miles and repeat this success with students and graduates at Birzeit University, in Palestine.</p>
+      <span class="space"></span>
+      <a href="/about/">Learn more</a>
+    </div>
+    <div class="grid-4">
+      <div id="slider"></div>
+    </div>
+  </section>
 </div>
