--- a/_harp/css/layout/_footer.scss
+++ b/_harp/css/layout/_footer.scss
@@ -38,3 +38,12 @@ footer {
     }
   }
 }
+
+
+@media(max-width: 800px) {
+  footer nav {
+    width: 100%;
+    margin: 0;
+    padding: 28px 15px 0px 15px;
+  }
+}
