--- a/_harp/css/layout/_navbar.scss
+++ b/_harp/css/layout/_navbar.scss
@@ -50,3 +50,11 @@ header {
     }
   }
 }
+
+@media(max-width: 800px) {
+  header nav {
+    width: 100%;
+    margin: 0;
+    padding: 28px 15px 0px 15px;
+  }
+}
