Minor typos in faq
also not sure about "Laptops and other equipment will be provided by the various partners involved in the project."

--- a/_harp/faq/index.ejs
+++ b/_harp/faq/index.ejs
@@ -80,7 +80,7 @@
       <span class="space"></span>
       <p>
         <strong>How can I give something back?</strong><br>
-        Almost as soon as you arrive, we will invite you to get involved in helping us run free programmes with the wider community. We would like to run coding workshops for young palestinians. We may also invite various organisations to provide charitable projects for us to work on, so we can all solve real world problems as we learn.
+        Almost as soon as you arrive, we will invite you to get involved in helping us run free programmes with the wider community. We would like to run coding workshops for young Palestinians. We may also invite various organisations to provide charitable projects for us to work on, so we can all solve real-world problems as we learn.
       </p>
       <span class="space"></span>
       <p>
